All visible bug fixed

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -21,16 +21,19 @@
   font-family: "Comic Neue", cursive;
   font-size: 3em;
   text-align: center;
+  margin: 1em;
 }
 
 .postcontent {
   font-family: "Open Sans", sans-serif;
-  font-size: 1.5em;
+  font-size: 2em;
+  margin: 1em;
+  border: 1px;
 }
 
 .btn-comment {
   position: absolute;
-  right: 0px;
+  right: 33em;
 }
 
 .greet {
@@ -39,78 +42,16 @@
   border-top: 5em;
 }
 
-.content-blog-div {
-  margin: 2em;
-  width: 100%;
-  height: 100%;
-}
-
 .form-margin {
   margin: 0.4em;
 }
 
-/* Preloader */
-
-.loader-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-body {
-  background: #ecf0f1;
+.comment-border {
+  border: 1px;
+  border-style: dashed;
+  margin: 1em;
 }
 
-.loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  border: 4px solid #fff;
-  animation: loader 2s infinite ease;
-}
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
-}
-@keyframes loader {
-  0% {
-    transform: rotate(0deg);
-  }
-  25% {
-    transform: rotate(180deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  75% {
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes loader-inner {
-  0% {
-    height: 0%;
-  }
-  25% {
-    height: 0%;
-  }
-  50% {
-    height: 100%;
-  }
-  75% {
-    height: 100%;
-  }
-  100% {
-    height: 0%;
-  }
+.btn-margin {
+  margin-bottom: 2em;
 }
